syntax = "proto3";

import "google/protobuf/empty.proto";
option go_package = "./;proto";

service User{
    rpc GetUserList(PageInfo) returns (UserListResponse);
    rpc GetUserByMobile(MobileRequest) returns (UserInfoResponse);//通过mob立工e登询用户
    rpc GetUserById(IdRequest) returns (UserInfoResponse);
    rpc CreateUser(CreateUserInfo) returns (UserInfoResponse);
    rpc UpdateUser(UpdateUserInfo) returns (google.protobuf.Empty);
    rpc CheckPassWord(PasswordCheckInfo) returns (CheckResponse);

}

message PasswordCheckInfo{
    string password = 1;
    string encryptedPassword = 2;
}

message CheckResponse{
    bool success = 1;
}

message PageInfo {
    uint32 pn = 1;
    uint32 pSize = 2;

}

message MobileRequest{
    string mobile = 1;
}

message UpdateUserInfo {
    int32 id = 1;
    string nickName = 2;
    string gender = 3;
    uint64 birthDay = 4;
}

message UserListResponse{

    int32 total = 1;
    repeated UserInfoResponse data = 2;

}

message UserInfoResponse{
    int32 id = 1;
    string password = 2;
    string mobile = 3;
    string nickName = 4;
    string birthDay = 5;
    string gender = 6;
    int32 role = 7;
}

message IdRequest{
    int32 id = 1;
}

message CreateUserInfo{
    string  nickname = 1;
    string password  = 2;
    string mobile = 3;
}


